# ag_notes

./: .gitignore  build.bat  build.sh  dodeca.ipynb  icosahedron.ipynb  polyinvars.ipynb  pyproject.toml  requirements.txt  tetra.ipynb  tetra.py
notes/: _config.yml  _toc.yml  check_for_tetras.py  dodeca.ipynb  icosahedron.ipynb  icosahedron.py  index.md  markdown.md  octahedral.ipynb  polyinvars.ipynb  references.bib  scatch2.ipynb  scratch.ipynb  scratch3.ipynb  scratch4.ipynb  scratch5.ipynb  scratch6.ipynb  scratch7.ipynb  scratch8.ipynb  solving_quintics.ipynb  sympy_imports.py  tetra.ipynb  tetra.py  tetra2.ipynb  utils.py
