[project]
name = "ag-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "ipympl>=0.9.7",
    "jupyter-book>=1.0.3",
    "matplotlib>=3.10.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "sympy>=1.13.3",
]
